--- a/December 31/Dec31.ipynb
+++ b/December 31/Dec31.ipynb
@@ -10,7 +10,7 @@
    },
    "source": [
     "## December 31, 2020 실습\n",
-    "2020년의 끝을 파이썬과 함께하게 되었습니다. Happy New year.\n",
+    "2020년의 끝을 파이썬과 함께하게 되었습니다. Happy New year~!\n",
     "오늘 실습은 List에 대한 내용으로, 문제 수가 적은 대신 조금 어렵게 느껴질 수 있을 것 같습니다."
    ]
   },
@@ -426,6 +426,58 @@
     "pycharm": {
      "name": "#%% code\n"
     }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## Additional Problems for Practice\n",
+    "추가 문제는 (혹시 시간이 남으면) 진행하겠지만, 아마 그럴 시간은 앞으로도 없을 예정입니다.\n",
+    "정규 실습보다 살짝 어려운 난이도로 구성했으니 흥미가 있다면 풀어 보기를 추천합니다.\n",
+    "\n",
+    "장기적으로 자동 채점 서버를 하나 구축할 생각이 있는데, 지금은 아직 없고 혹시 푸신 분이 있다면 개인적으로 연락해주시면 확인해드리겠습니다. :)\n",
+    "기대하고 있겠습니다."
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "### 추가 1. Palindrome\n",
+    "- While, If, String\n",
+    "\n",
+    "**문제** 사이에 한 칸씩 공백을 두고 영어 문자열 여러 개가 주어집니다. 이때, 각 문자열이 Palindrome인지 아닌지를 판단해서 O 또는 X를 출력하는 프로그램을 작성하세요.\n",
+    "\n",
+    "**입력 예시** `asdndsa python is fun palindrome coding aaa qasaq t znxuc`\n",
+    "\n",
+    "**출력 예시** `O X X X X X O O X`\n",
+    "\n",
+    "공간상 한 칸씩 공백을 두도록 했지만, 실제로는 한 줄에 하나씩 출력하도록 작성해 주세요."
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "### 추가 2. Caesar Cipher\n",
+    "**문제** 고대 로마에서 쓰였던 암호는, 알파벳의 각 글자를 미리 정해진 수 $n$칸 만큼 미는 방식입니다. 예를 들어, $n = 2$ 를 미리 정했다면, `A` 는 `C`가, `B`는 `D`가 되는 식입니다. `X`는 `Z`가 되고, `Y`는 `A` 가 되겠네요. 여러분의 이번 문제는 주어진 글을 Caesar Cipher로 암호화하는 것입니다. 첫 줄에 암호문이, 그 다음 줄에 몇 글자를 밀지가 주어집니다.\n",
+    "\n",
+    "**입력 예시**\n",
+    "```\n",
+    "fun with python\n",
+    "3\n",
+    "```\n",
+    "**출력 예시**\n",
+    "```\n",
+    "ixq zlwk sbwkrq\n",
+    "```"
+   ],
+   "metadata": {
+    "collapsed": false
    }
   }
  ],
