--- a/December 31/Dec31.ipynb
+++ b/December 31/Dec31.ipynb
@@ -22,6 +22,7 @@
     "colab": {
       "name": "Dec31.ipynb",
       "provenance": [],
+      "collapsed_sections": [],
       "include_colab_link": true
     }
   },
@@ -111,7 +112,6 @@
         "        prodName = input(\"상품관리3-상품 확인) 확인하고자 하는 상품은?\")\n",
         "        if prodName in prodList:\n",
         "            print(f\"{prodName} 검색 완료\")\n",
-        "            print(prodList)\n",
         "        else:\n",
         "            print(\"상품을 찾지 못하였습니다.\")\n",
         "    elif op == 4:\n",
@@ -120,6 +120,220 @@
       ],
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "ehm6i7HCgEGA"
+      },
+      "source": [
+        "삭제 부분에서 많이 보이는 실수입니다."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "IaTqYJ3jgMNA"
+      },
+      "source": [
+        "a = input(\"... \")\r\n",
+        "if not (a in L):\r\n",
+        "    print(\"상품을 찾지 못하였습니다.\")\r\n",
+        "    break # continue\r\n",
+        "L.remove(a)\r\n",
+        "print(f\"{a} 삭제 완료\")"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "zBpNkElDgyXI"
+      },
+      "source": [
+        "`while` 문 안에서 이런 식으로 작성하게 되면, 저 `not (a in L)` 에 걸렸을 때 에러를 출력한 다음 바로 break로 while문을 탈출하게 됩니다. 우리는 이를 원하지 않고, 다시 어떤 작업을 할지로 돌아가서 작업을 계속하고 싶습니다.\r\n",
+        "\r\n",
+        "이럴 때 쓰는 것이 `continue` 입니다. `continue`는 반복문 도중에 만나면, 남은 구문을 모두 무시하고 반복문의 다음 회차로 넘어가게 됩니다."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "4KbaQbYBDzdb"
+      },
+      "source": [
+        "`continue`를 `while` 안에서 사용할 때 가장 주의해야 하는 것은 아래 예시의 상황입니다."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "DC41liD2EDF4"
+      },
+      "source": [
+        "i = 0\r\n",
+        "some_list = [1, 2, 3, 4, 5]\r\n",
+        "while i < len(some_list):\r\n",
+        "    print(some_list[i])\r\n",
+        "    if some_list[i] == 3:\r\n",
+        "        continue\r\n",
+        "    i += 1"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "bXJTKrJVEYQZ"
+      },
+      "source": [
+        "`continue` 에 의해서, `i += 1` 도 같이 무시되었기 때문에, 한번 저 조건이 만족되면 절대 넘어가지 않고 무한 루프에 빠지게 됩니다."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "25vQIhM3E__x"
+      },
+      "source": [
+        "또 하나는, 다음 두 코드의 차이도 꼭 기억해야 합니다."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "jC2O0_VZFDB6"
+      },
+      "source": [
+        "if A : \r\n",
+        "    ...\r\n",
+        "if B : \r\n",
+        "    ..."
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "HK29LuwBFIUS"
+      },
+      "source": [
+        "if A :\r\n",
+        "    ...\r\n",
+        "elif B : # (not A) and B\r\n",
+        "    ... "
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "F_di_MFYFLW5"
+      },
+      "source": [
+        "이 문제 같은 경우에는 괜찮았을 것 같은데, 차이는 `A와 B를 모두 만족하는 입력` 의 처리입니다. 위 코드는 그 경우 두 가지를 모두 실행하지만, 아래 코드는 B 부분을 실행하지 않습니다. `elif` 를 적절히 사용해서 로직을 명확하게 해야 합니다."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "P7uZKM_aK3VQ"
+      },
+      "source": [
+        "if A:\n",
+        "    ...\n",
+        "else B:"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "p4fEHgEjLqMR"
+      },
+      "source": [
+        "a = input()\n",
+        "while True:\n",
+        "    a = input()\n",
+        "    ...\n"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "KZCP8bpIJUhZ"
+      },
+      "source": [
+        "다른 언어로 프로그래밍을 해보신 분을 위한 설명입니다. \r\n",
+        "\r\n",
+        "python에는 `!` operator가 없습니다. `not`을 써야 합니다.\r\n",
+        "\r\n",
+        "혹시 그 `다른 언어` 가 뭐냐에 따라서 `~True`를 쓰고 싶을 수도 있는데, `python`에서 `~True`는 `False`가 아니라 `-2` 정수 값입니다. `-2` 는 Truthy하기 때문에, 다른 언어에서 오신 분들께 충격을 선사할 수 있습니다."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "wepSh4I2JrNJ",
+        "outputId": "02aedbc7-d9ca-4dc0-b3f8-2a1ef363989b"
+      },
+      "source": [
+        "if ~ True:\r\n",
+        "    print(\"Python is weird\")\r\n",
+        "if ~ False:\r\n",
+        "    print(\"Please use not keyword\")"
+      ],
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Python is weird\n",
+            "Please use not keyword\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "s0_7R2P2QW-w"
+      },
+      "source": [
+        "python 코드 중 이런 코드를 볼 일이 있을 수도 있습니다. "
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "FLXrtaC1Qdxs"
+      },
+      "source": [
+        "while 1 :\r\n",
+        "    ..."
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "na0xEUkIQfZA"
+      },
+      "source": [
+        "이 코드는 `while True` 와 같은 의미입니다. 관행적으로 저렇게 쓰던 먼 과거로부터 전해내려오는 style이고, 이제는 별로 권장하지는 않지만 저 방법이 익숙한 프로그래머들과 C라는 언어를 주력으로 쓰던 프로그래머들의 무한한 사랑으로 계속 쓰이고 있습니다. "
+      ]
     },
     {
       "cell_type": "markdown",
@@ -145,6 +359,35 @@
     {
       "cell_type": "code",
       "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "P8T_GEQxPNO4",
+        "outputId": "ceb5c041-71d5-48ea-80a9-c27cc96af959"
+      },
+      "source": [
+        "s = \"string\"\n",
+        "'s' in s"
+      ],
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "True"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 15
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
         "pycharm": {
           "name": "#%% code\n"
         },
@@ -158,7 +401,7 @@
         "    name = names[i]\n",
         "    if name[-1] == '동':\n",
         "        print(name)\n",
-        "    i += 1"
+        "    i += 1\n"
       ],
       "execution_count": null,
       "outputs": []
@@ -283,7 +526,8 @@
       },
       "source": [
         "if words[i] == 'a':\n",
-        "    pass"
+        "    pass\n",
+        "else:"
       ],
       "execution_count": null,
       "outputs": []
@@ -296,6 +540,112 @@
       },
       "source": [
         "이런 느낌으로 쓸 수 있습니다."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "ssLnFhqnWQ03"
+      },
+      "source": [
+        "**실수 주의** 이 실수는 찾기 꽤 어렵고, 솔직히 (저를 포함한) 컴공과 학생들도 정말 많이 합니다. 아래 코드의 버그를 찾을 수 있나요?\r\n",
+        "\r\n",
+        "(대문자 고려는 제가 코드양을 줄이기 위해 일부러 뺐습니다. 그거 말고, `에러`를 찾아 주세요)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "bn7OgFITWeM_"
+      },
+      "source": [
+        "sentence = input('Input: ')\r\n",
+        "words = sentence.split()\r\n",
+        "length = len(words)\r\n",
+        "index = 0\r\n",
+        "\r\n",
+        "while index < length:\r\n",
+        "    if words[index] == 'a' or words[index] == 'an' or words[index] == 'the':\r\n",
+        "        words.remove(words[index])\r\n",
+        "    index += 1\r\n",
+        "\r\n",
+        "print(words)"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "jZC_n4xrXDhG"
+      },
+      "source": [
+        "찾으셨나요?\r\n",
+        "\r\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "Tv4GBC0SXLhg"
+      },
+      "source": [
+        "remove를 하는 도중에, words 리스트의 길이가 줄어들어서, 결국에는 `length` 보다 적은 개수만 남게 됩니다. 그렇기 때문에 list index out of bound가 발생하게 되는데요. 이런 부분들은 정말 주의하셔야 합니다.\r\n",
+        "\r\n",
+        "가급적, `지금 보고 있는 리스트` 에서 뭔가를 지우면서 계속 도는 행동은 지양합니다. `Do not erase / insert list you are iterating`. insert도 마찬가지인 이유는, 하나를 중간에 넣다보면 마지막 element를 빼먹는다던가, 두 번 본다던가 하는 일들이 벌어지게 됩니다. \r\n",
+        "`[1, 2, 3, 4, 5]` 에서, 쭉 돌면서 홀수마다 맨 앞에 0을 하나씩 넣는다고 생각해 봅시다.  "
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "SHzOowgsX2TY"
+      },
+      "source": [
+        "seq = [1, 2, 3, 4, 5]\r\n",
+        "i = 0\r\n",
+        "while i < 5:\r\n",
+        "    if seq[i] % 2 == 1:\r\n",
+        "        seq.insert(0, 0)\r\n",
+        "    print(seq)\r\n",
+        "    i += 1"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "5gs8bupsYJyF"
+      },
+      "source": [
+        "length를 미리 계산하지 않고 매번 직접 확인하면 괜찮을까요? 그렇지 않습니다."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "vjXg8SsBYJaG"
+      },
+      "source": [
+        "seq = [1, 2, 3, 4, 5]\r\n",
+        "i = 0\r\n",
+        "while i < len(seq):\r\n",
+        "    if seq[i] % 2 == 1:\r\n",
+        "        seq.insert(0, 0)\r\n",
+        "    print(seq)\r\n",
+        "    i += 1"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "h1Uq6wTjb2-J"
+      },
+      "source": [
+        "두 코드 다 원하는 일을 수행하지 않음을 볼 수 있습니다."
       ]
     },
     {
@@ -340,7 +690,7 @@
         "total = 0\n",
         "\n",
         "while True:\n",
-        "    lottery = input(\"네 개의 숫자를 입력하세요: \").split()\n",
+        "    lottery = input(\"네 개의 숫자를 입력하세요: \").split(',')\n",
         "    i = 0\n",
         "    while i < len(lottery):\n",
         "        lottery[i] = int(lottery[i])\n",
@@ -377,6 +727,37 @@
       ],
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "9ifHC9BofeOH",
+        "outputId": "554e738a-0b4b-45e1-f17c-7d995bfa21fa"
+      },
+      "source": [
+        "a = [1, 2, 3]\r\n",
+        "b = [2, 3, 4]\r\n",
+        "c = a or b\r\n",
+        "c"
+      ],
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[1, 2, 3]"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 27
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -422,11 +803,28 @@
         "\n",
         "`map` 은 우리가 아직 배우지 않은 것이고 미래에 배울지 여부는 아직 잘 모르겠지만, 저 한 줄 자체를 그냥 많이 쓰기 때문에 `map`이 무엇인지 전혀 몰라도 저 한 줄만 외워도 됩니다. 잠깐 설명을 하자면, `map(f, lst)` 는, `lst`의 원소를 쭉 돌면서 `f` 라는 연산을 적용하는 역할을 합니다. 나중에 함수에 대해 배우고 나면 이부분으로 다시 돌아오겠습니다. 지금 이해하는 바는, `int(x)`가 사실은, 어떤 object `x` 를 받아서 (문자열을 받아서), 이를 숫자로 바꾼 `y`를 반환하는, 일종의 수학에서의 함수와 비슷한 뭔가라는 느낌만 가지고 있으면 됩니다. 즉, `map(int, 리스트)` 하면, 리스트의 각 원소를 모두 `int`로 씌워서 바꿔 보려고 시도합니다.\n",
         "\n",
+        "`[x, y, z]` => `[f(x), f(y), f(z)]`\n",
+        "\n",
+        "\n",
         "그런데, 파이썬에서는 `map`해서 나온 결과물의 타입이 리스트가 아닙니다. 사실 이부분을 설명하려면 끝없이 깊어지고, 이 수업의 목표와도 거리가 멀기 때문에, 대충 그냥 `이상한 뭔가가 된다` 라고 생각하시면 됩니다. 이를 강제로 `list`로 바꿔 주면 우리의 목표가 끝납니다.\n",
         "\n",
         "이 방법은 약간 과거의 유물 같은 느낌이 조금 있습니다만, 아직도 수많은 파이썬 프로그래머들이 애용합니다. (구버전의 파이썬에 익숙했던 사람들이 특히 그렇습니다). 나중에, 조금더 현대적인 방법도 또 소개하겠습니다. 일단은 저런 방법을 많이 쓴다는 사실을 알아 두면 좋겠습니다.\n",
         "\n",
         "제가 간혹, 동영상에서 다룬 범위를 넘어가더라도 이런 부분을 설명하는 이유는 여러분이 다른 사람의 파이썬 코드를 많이 읽었으면 좋겠고, 그 과정에서 핵심적이지 않은 부분에 걸려들어서 헤매지 않았으면 좋겠기 때문입니다."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "PRsAErDmiOzJ"
+      },
+      "source": [
+        "```\n",
+        "3, 5, 7, 8 -> split\n",
+        "[\"3\", \"5\", \"7\", \"8'] -> map(int, *) \n",
+        "{3, 5, 7, 8} -> list()\n",
+        "[3, 5, 7, 8]\n",
+        "```"
       ]
     },
     {
